--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "engines": {
     "node": ">=20.9.0"
   },
+  "scripts": {
+    "prepare": "husky install"
+  },
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.2",
