--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "node": ">=20.9.0"
   },
   "scripts": {
-    "prepare": "husky install"
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "prepare": "husky install",
+    "start": "next start"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
@@ -35,7 +39,15 @@
     "@semantic-release/github": "^9.2.6",
     "@semantic-release/npm": "^11.0.2",
     "@semantic-release/release-notes-generator": "^12.1.0",
+    "@types/node": "^20.11.20",
+    "@types/react": "^18.2.58",
     "husky": "^8.0.3",
     "semantic-release": "^23.0.2"
+  },
+  "dependencies": {
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.3.3"
   }
 }
