--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "prepare": "husky install",
+    "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,ts,tsx}\"",
     "start": "next start"
   },
   "devDependencies": {
@@ -41,7 +42,14 @@
     "@semantic-release/release-notes-generator": "^12.1.0",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.58",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
+    "eslint-config-prettier": "^9.1.0",
     "husky": "^8.0.3",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
     "semantic-release": "^23.0.2"
   },
   "dependencies": {
