ci: add more steps to the pull request checks workflow

--- a/.github/workflows/pull_request_checks.yml
+++ b/.github/workflows/pull_request_checks.yml
@@ -14,14 +14,28 @@ jobs:
     steps:
       - name: "🛎 Checkout"
         uses: actions/checkout@v4
+      - name: "🧶 Setup Yarn Dependencies"
+        uses: ./.github/actions/use-yarn-dependencies
       - name: "🦫 Setup Golang Dependencies"
         uses: ./.github/actions/use-golang-dependencies
 
   ##
-  # build
+  # lint and build
   ##
 
-  build:
+  lint:
+    name: "Lint"
+    needs: install
+    runs-on: ubuntu-latest
+    steps:
+      - name: "🛎 Checkout"
+        uses: actions/checkout@v4
+      - name: "🧶 Setup Yarn Dependencies"
+        uses: ./.github/actions/use-yarn-dependencies
+      - name: "👕 Lint"
+        run: yarn lint
+
+  build_core_app:
     name: "Build Core App"
     needs: install
     runs-on: ubuntu-latest
@@ -32,4 +46,21 @@ jobs:
       - name: "🦫 Setup Golang Dependencies"
         uses: ./.github/actions/use-golang-dependencies
       - name: "🏗️ Build"
-        run: make build-core
+        run: |
+          make setup
+          make build-core
+
+  build_web_app:
+    name: "Build Web App"
+    needs: install
+    runs-on: ubuntu-latest
+    environment: development
+    steps:
+      - name: "🛎 Checkout"
+        uses: actions/checkout@v4
+      - name: "🧶 Setup Yarn Dependencies"
+        uses: ./.github/actions/use-yarn-dependencies
+      - name: "🏗️ Build"
+        run: |
+          make setup
+          ./scripts/load_env_vars.sh "web" && make build-web
