--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,20 +21,7 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "paths": {
-      "@app/animations": ["src/animations"],
-      "@app/components/*": ["src/components/*"],
-      "@app/constants": ["src/constants"],
-      "@app/enums": ["src/enums"],
-      "@app/errors": ["src/errors"],
-      "@app/entities": ["src/entities"],
-      "@app/features/*": ["src/features/*"],
-      "@app/graphql": ["src/graphql"],
-      "@app/hooks/*": ["src/hooks/*"],
-      "@app/selectors": ["src/selectors"],
-      "@app/theme": ["src/theme"],
-      "@app/translations": ["src/translations"],
-      "@app/types": ["src/types"],
-      "@app/utils": ["src/utils"]
+      "@app/types": ["app/types"]
     },
     "removeComments": true,
     "resolveJsonModule": true,
