--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -33,9 +33,10 @@ services:
     ports:
       - "${WEB_APP_PORT:-8080}:${WEB_APP_PORT:-8080}"
     volumes:
+      - ../app:/usr/app/app:cached
       - ../next.config.mjs:/usr/app/next.config.mjs:cached
       - ../package.json:/usr/app/package.json:cached
-      - ../app:/usr/app/app:cached
+      - ../public:/usr/app/public:cached
       - ../tsconfig.json:/usr/app/tsconfig.json:cached
 
 networks:
