--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "start": "next start"
   },
   "devDependencies": {
+    "@chakra-ui/utils": "^2.0.14",
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.2",
     "@semantic-release/changelog": "^6.0.3",
@@ -57,8 +58,14 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^11.0.6",
     "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1"
   }
 }
