feat: add navigation drawer and upload route

--- a/configs/.env.web.example
+++ b/configs/.env.web.example
@@ -8,3 +8,4 @@ NEXT_PUBLIC_DESCRIPTION="Aether is a modern file storage platform that implement
 NEXT_PUBLIC_LOG_LEVEL="debug"
 NEXT_PUBLIC_TAGLINE="Journey into the Aether where storage defies conventional bounds"
 NEXT_PUBLIC_TITLE="Aether"
+NEXT_PUBLIC_VERSION=
