--- a/configs/.env.web.example
+++ b/configs/.env.web.example
@@ -4,9 +4,9 @@ NAME="aether-web"
 PORT="8080"
 
 # public
-NEXT_PUBLIC_CORE_URL="htpp://localhost:3000"
-NEXT_PUBLIC_DESCRIPTION="Aether is a modern file storage platform that implements a state-of-the-art Merkle tree structure to store multiple files"
+NEXT_PUBLIC_CORE_URL="http://localhost:3000"
+NEXT_PUBLIC_DESCRIPTION="aether is a modern file storage platform that implements a state-of-the-art Merkle tree structure to store multiple files"
 NEXT_PUBLIC_LOG_LEVEL="debug"
-NEXT_PUBLIC_TAGLINE="Journey into the Aether where storage defies conventional bounds"
-NEXT_PUBLIC_TITLE="Aether"
+NEXT_PUBLIC_TAGLINE="Journey into the aether where storage defies conventional bounds"
+NEXT_PUBLIC_TITLE="aether"
 NEXT_PUBLIC_VERSION=
